--- a/src/main/resources/docgen/templates/msmarco-v2-passage-splade-pp-ed.template
+++ b/src/main/resources/docgen/templates/msmarco-v2-passage-splade-pp-ed.template
@@ -2,8 +2,8 @@
 
 **Model**: SPLADE++ CoCondenser-EnsembleDistil
 
-This page describes regression experiments, integrated into Anserini's regression testing framework, applying the [SPLADE++ CoCondenser-EnsembleDistil](https://huggingface.co/naver/splade-cocondenser-ensembledistil) model on MS MARCO (V2) Passage Corpus.
-Here, we evaluate on the dev/dev2 queries.
+This page describes regression experiments, integrated into Anserini's regression testing framework, applying the [SPLADE++ CoCondenser-EnsembleDistil](https://huggingface.co/naver/splade-cocondenser-ensembledistil) model to the MS MARCO V2 Passage Corpus.
+Here, we evaluate on the dev queries.
 
  The model can be described in the following paper:
 
@@ -18,7 +18,7 @@ From one of our Waterloo servers (e.g., `orca`), the following command will perf
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
 ```
 
-We make available a version of the MS MARCO passage corpus that has already been encoded with SPLADE++ CoCondenser-EnsembleDistil.
+We make available a version of the corpus that has already been encoded with SPLADE++ CoCondenser-EnsembleDistil.
 
 From any machine, the following command will download the corpus and perform the complete regression, end to end:
 
