--- a/src/main/resources/docgen/templates/msmarco-passage-deepimpact.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-deepimpact.template
@@ -16,7 +16,7 @@ From one of our Waterloo servers (e.g., `orca`), the following command will perf
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
 ```
 
-We make available a version of the MS MARCO passage corpus that has already been processed with DeepImpact, i.e., we have applied neural inference and stored the output sparse vectors.
+We make available a version of the MS MARCO Passage Corpus that has already been processed with DeepImpact, i.e., we have applied neural inference and stored the output sparse vectors.
 
 From any machine, the following command will download the corpus and perform the complete regression, end to end:
 
