--- a/src/main/resources/docgen/templates/dl22-passage-unicoil-noexp-0shot.template
+++ b/src/main/resources/docgen/templates/dl22-passage-unicoil-noexp-0shot.template
@@ -72,7 +72,7 @@ For additional details, see explanation of [common indexing options](common-inde
 
 ## Retrieval
 
-Topics and qrels are stored in [`tools/topics-and-qrels/`](../tools/topics-and-qrels/).
+Topics and qrels are stored [here](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels), which is linked to the Anserini repo as a submodule.
 The regression experiments here evaluate on the 76 topics for which NIST has provided judgments as part of the [TREC 2022 Deep Learning Track](https://trec.nist.gov/data/deep2022.html).
 
 After indexing has completed, you should be able to perform retrieval as follows:
