--- a/src/main/resources/docgen/templates/beir-v1.0.0-cqadupstack-gaming-flat.template
+++ b/src/main/resources/docgen/templates/beir-v1.0.0-cqadupstack-gaming-flat.template
@@ -24,15 +24,15 @@ For additional details, see explanation of [common indexing options](common-inde
 
 ## Retrieval
 
+Topics and qrels are stored [here](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels), which is linked to the Anserini repo as a submodule.
+
 After indexing has completed, you should be able to perform retrieval as follows:
 
 ```
 ${ranking_cmds}
 ```
 
-Topics and qrels are stored [here](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels), which is linked to the Anserini repo as a submodule.
-
-After indexing has completed, you should be able to perform retrieval as follows:
+Evaluation can be performed using `trec_eval`:
 
 ```
 ${eval_cmds}
