--- a/src/main/resources/docgen/templates/wiki-all-6-3-tamber-bm25.template
+++ b/src/main/resources/docgen/templates/wiki-all-6-3-tamber-bm25.template
@@ -31,7 +31,7 @@ For additional details, see explanation of [common indexing options](common-inde
 ## Retrieval
 
 Topics and qrels are stored [here](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels), which is linked to the Anserini repo as a submodule.
-The regression experiments here evaluate on the test set of multiple QA datasets, namely Natural Questions, TriviaQA, SQuAD, and WebQuestions.
+The regression experiments here evaluate on the test sets of Natural Questions, TriviaQA, SQuAD, and WebQuestions.
 
 After indexing has completed, you should be able to perform retrieval as follows:
 
