--- a/src/main/resources/e2e_sparse_dense_lucene/pre-encoded.yaml
+++ b/src/main/resources/e2e_sparse_dense_lucene/pre-encoded.yaml
@@ -16,15 +16,15 @@ collections:
     results:
       msmarco-passage-dev-subset:
         recip_rank: 0.184
-        recall_1000: 0.853
+        recall_1000_msmarco: 0.853
       dl19-passage:
-        map: 0.377
+        map: 0.301
         ndcg_cut_10: 0.506
-        recall_1000: 0.739 
+        recall_1000: 0.750
       dl20-passage:
-        map: 0.344
-        ndcg_cut_10: 0.480
-        recall_1000: 0.723
+        map: 0.286 
+        ndcg_cut_10: 0.480 
+        recall_1000: 0.786 
     metric_precision: 3
   cosdpr-distil:
     name: cosdpr-distil
@@ -41,15 +41,15 @@ collections:
     results:
       msmarco-passage-dev-subset:
         recip_rank:  0.389
-        recall_1000: 0.975
+        recall_1000_msmarco: 0.975
       dl19-passage:
-        map: 0.477
-        ndcg_cut_10: 0.725
-        recall_1000: 0.757 
+        map: 0.466 
+        ndcg_cut_10: 0.725 
+        recall_1000: 0.822 
       dl20-passage:
-        map: 0.470
-        ndcg_cut_10: 0.703
-        recall_1000: 0.771
+        map: 0.487
+        ndcg_cut_10: 0.703 
+        recall_1000: 0.852 
     metric_precision: 3
   splade-pp-ed:
     name: splade-pp-ed
@@ -66,13 +66,13 @@ collections:
     results:
       msmarco-passage-dev-subset:
         recip_rank:  0.383
-        recall_1000: 0.983
+        recall_1000_msmarco: 0.983
       dl19-passage:
-        map: 0.526
-        ndcg_cut_10: 0.731
-        recall_1000: 0.830 
+        map: 0.505 
+        ndcg_cut_10: 0.731 
+        recall_1000: 0.873
       dl20-passage:
-        map: 0.532
-        ndcg_cut_10: 0.720
-        recall_1000: 0.840
+        map: 0.500 
+        ndcg_cut_10: 0.720 
+        recall_1000: 0.900
     metric_precision: 3
