--- a/src/main/resources/regression/dl20-passage-bge-base-en-v1.5-hnsw-int8.yaml
+++ b/src/main/resources/regression/dl20-passage-bge-base-en-v1.5-hnsw-int8.yaml
@@ -51,7 +51,7 @@ topics:
 
 models:
   - name: bge-hnsw
-    display: BGE-en-v1.5
+    display: BGE-base-en-v1.5
     type: hnsw
     params: -generator VectorQueryGenerator -topicField vector -threads 16 -hits 1000 -efSearch 1000
     results:
