--- a/src/main/resources/regression/beir-v1.0.0-bioasq-bge-base-en-v1.5.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-bioasq-bge-base-en-v1.5.yaml
@@ -43,11 +43,11 @@ models:
   - name: bge-hnsw
     display: BGE-base-en-v1.5
     type: hnsw
-    params: -generator VectorQueryGenerator -topicField vector -threads 16 -hits 1000 -efSearch 1000
+    params: -generator VectorQueryGenerator -topicField vector -removeQuery -threads 16 -hits 1000 -efSearch 1000
     results:
       nDCG@10:
-        - 0.453
+        - 0.401
       R@100:
-        - 0.992
+        - 0.604
       R@1000:
-        - 0.996
+        - 0.754
