--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,10 @@
               <id>SearchCollection</id>
             </program>
             <program>
+              <mainClass>io.anserini.search.FuseRuns</mainClass>
+              <id>FuseRuns</id>
+            </program>
+            <program>
               <mainClass>io.anserini.search.SearchHnswDenseVectors</mainClass>
               <id>SearchHnswDenseVectors</id>
             </program>
